@@ -1,0 +1,3 @@
+typedef void Void; explain Void x
+        ^
+9: error: variable of void; did you mean pointer to void?
