@@ -1,0 +1,1 @@
+cdecl @ @ @ typedef void Void; explain Void x @ 65
