@@ -33,6 +33,10 @@ Declarations like:
 
 are now handled correctly.
 
+** Fixed `typedef` of `void`
+`typedef void V` is now correctly allowed and `V p` is now correctly flagged as
+an error.
+
 ** Fixed pointer to `typedef` of reference
 Declarations like:
 
